
Next release

- Added support for groups.  Although the implementation is currently
tied to a particular implementation of groups, it should be
easy to generalize to any product that adds groups to Zope.

- Added a pop-up expression reference.

- Gave Managers the option to bypass all guards.

- Workflow can now help decide whether object types appear in add
menus.  This requires help from the types tool.


Version 0.5

- Help documentation contributed by John Morton.

- In the ZMI, states are now careful to show only transitions that
still exist.

- States now have a description, in addition to a title.

- Worklist variables now allow matches with multiple values (separated
by semicolons) and use Python string formatting for dynamic matches.

- Fixed issues with ObjectMoved exceptions.

- Fixed the default permissions for new DCWorkflow instances.

- Expression.py was moved to CMFCore.


Version 0.4.2

- Fixed getInfoFor() using patch from Sebastien.Bigaret@inqual.com.  Thanks!

- executeTransition(): Optionally preserve (by copying) unchanged
status variables.

- Updated to ZPL 2.0.

- Added scripts that get executed after a transition.


Version 0.4.1

- Corrected an expression in the classic workflow implementation.

- Made expressions work again in scripts by removing the requirement
  that "REQUEST" exist.


Version 0.4

- Thanks to Ulrich Eck (ueck@net-labs.de), you can now set variables
  on states and transitions.  Great job!

- Changed expressions to TALES.  This means that it is now required that
  you have the PageTemplates product installed; see
  http://www.zope.org/Members/4am/ZPT .
  Your expressions will need to be written
  again, but they should be a lot cleaner now.

- Added a second default workflow that closely resembles the "classic"
  default workflow.  Just visit a workflow tool and click "Add workflow"
  then select "Web-configurable workflow [Classic]".


Version 0.3 (never officially released)
